# cool-compiler

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  TODO.md
crates/: .rustfmt.toml  Cargo.toml
crates/cool_arena/: Cargo.toml
crates/cool_arena/src/: arena.rs  handle.rs  intern_arena.rs  lib.rs  slice_arena.rs  str_arena.rs  unsafe_bump.rs
crates/cool_arena/src/arena/: arena.rs  interned_ref.rs  mod.rs
crates/cool_arena/src/slice/: interned_slice.rs  mod.rs  slice_arena.rs  str_arena.rs
crates/cool_ast/: Cargo.toml
crates/cool_ast/src/: ast_generator.rs  bin_op.rs  block_elem.rs  cond_block.rs  defer_code_map.rs  error.rs  expr_or_stmt.rs  fn_item.rs  fn_prototype.rs  fn_state.rs  function.rs  item.rs  item_decl.rs  lib.rs  module.rs  package.rs  program.rs  resolve.rs  unify.rs
crates/cool_ast/src/expr/: access_expr.rs  align_of_expr.rs  array_expr.rs  binary_expr.rs  block_expr.rs  cast_expr.rs  cond_expr.rs  deref_expr.rs  fn_call_expr.rs  fn_expr.rs  for_expr.rs  ident_expr.rs  if_expr.rs  index_expr.rs  literal_expr.rs  match_expr.rs  mod.rs  offset_of_expr.rs  paren_expr.rs  range_expr.rs  return_expr.rs  size_of_expr.rs  stmt_expr.rs  struct_expr.rs  subscript_expr.rs  tuple_expr.rs  unary_expr.rs  unit_expr.rs  variant_wrap_expr.rs  while_expr.rs  wrap_expr.rs
crates/cool_ast/src/file/: decl.rs  import.rs  mod.rs
crates/cool_ast/src/item/: const_item.rs  fn_item.rs  item_decl.rs  mod.rs  module_item.rs  struct_item.rs
crates/cool_ast/src/op/: assign_op.rs  binary_op.rs  mod.rs
crates/cool_ast/src/resolve/: fn_ty.rs  mod.rs  resolve_fn.rs  resolve_literal.rs  resolve_ty.rs
crates/cool_ast/src/stmt/: assign_stmt.rs  break_stmt.rs  continue_stmt.rs  decl_stmt.rs  defer_stmt.rs  expr_stmt.rs  for_loop.rs  mod.rs  return_stmt.rs  while_loop.rs
crates/cool_ast/src/ty/: fn_ty.rs  variant_ty.rs
crates/cool_ast/src/utils/: fn_abi.rs  ident.rs  mod.rs  pattern.rs
crates/cool_cli/: Cargo.toml
crates/cool_cli/src/: args.rs  errors.rs  main.rs
crates/cool_codegen/: Cargo.toml
crates/cool_codegen/src/: block_elem.rs  builder_ext.rs  expr.rs  fn_state.rs  function.rs  generated_tys.rs  lib.rs  stmt.rs  ty_codegen.rs  utils.rs  value.rs
crates/cool_codegen/src/expr/: access_expr.rs  array_expr.rs  binary_expr.rs  block_expr.rs  cast_expr.rs  cond_expr.rs  deref_expr.rs  fn_call_expr.rs  for_expr.rs  index_expr.rs  layout_expr.rs  literal_expr.rs  match_expr.rs  mod.rs  range_expr.rs  return_expr.rs  struct_expr.rs  subscript_expr.rs  tuple_expr.rs  unary_expr.rs  variant_wrap_expr.rs  while_expr.rs
crates/cool_codegen/src/stmt/: assign_stmt.rs  continue_stmt.rs  decl_stmt.rs  for_loop.rs  mod.rs  return_stmt.rs  while_loop.rs
crates/cool_codegen/src/ty/: basic_type_enum_option_ext.rs  generated_tys.rs  mod.rs  ty_field_map.rs
crates/cool_codegen/src/value/: callable_value.rs  loaded_value.rs  memory_value.rs  mod.rs  value.rs
crates/cool_collections/: Cargo.toml
crates/cool_collections/src/: arena.rs  arena_ref.rs  hash_map_ext.rs  id_indexed_vec.rs  index.rs  lib.rs  small_string.rs  small_vec_map.rs  small_vec_set.rs  unsafe_bump.rs  vec_map.rs  vec_set.rs
crates/cool_derive/: Cargo.toml
crates/cool_derive/src/: define_symbols.rs  define_tys.rs  derive_section.rs  lexer_consts.rs  lib.rs  ty_consts.rs
crates/cool_driver/: Cargo.toml
crates/cool_driver/src/: code_generator_context.rs  driver.rs  error.rs  lib.rs  line_offsets.rs  module_paths.rs  options.rs  p0_parse.rs  package.rs  parsed.rs  paths.rs  source_file.rs  source_map.rs
crates/cool_driver/src/artifact/: p0_parsed_crate.rs
crates/cool_driver/src/pass/: define_items.rs  mod.rs  p0_parse.rs  parse_project.rs  read_project.rs  solve_imports.rs
crates/cool_driver/src/passes/: mod.rs  p0_init.rs  p0_parse.rs  p1_define_items.rs  p1_define_toplevel_tys.rs  p1_define_tys.rs  p1_parse.rs  p2_define_fn_tys.rs  p2_define_tys.rs  p2_gen_ast.rs  p2_generate_ast.rs  p3_define_fn_tys.rs  p3_gen_ast.rs  p4_gen_ast.rs  p4_gen_code.rs  p5_gen_code.rs
crates/cool_driver/src/stages/: mod.rs  parse.rs  resolve_aliases.rs
crates/cool_ir/: Cargo.toml
crates/cool_ir/src/: lib.rs  resolve_fn.rs  resolve_ty.rs
crates/cool_lexer/: Cargo.toml
crates/cool_lexer/src/: consts.rs  cursor.rs  lib.rs  literal.rs  punct.rs  symbol.rs  token.rs  token_stream.rs  utils.rs
crates/cool_lexer/src/lexer/: cursor.rs  lexed_source_file.rs  line_offsets.rs  mod.rs  source_file.rs  token_stream.rs  tokenizer.rs
crates/cool_lexer/src/symbols/: global_symbol_table.rs  mod.rs  symbol.rs  symbol_table.rs
crates/cool_lexer/src/tokens/: group.rs  literal.rs  mod.rs  punctuation.rs  symbol.rs  token.rs  token_kind.rs
crates/cool_package/: Cargo.toml
crates/cool_package/src/: lib.rs  project.rs  version.rs
crates/cool_parser/: Cargo.toml
crates/cool_parser/src/: abstract_fn.rs  assign_pattern.rs  block_elem.rs  cond_block.rs  error.rs  expr_or_stmt.rs  fn_extern_decl.rs  fn_prototype.rs  ident.rs  lib.rs  module.rs  operator.rs  parse_tree.rs  parser.rs  path.rs  pattern.rs  source_file.rs  ty.rs
crates/cool_parser/src/decl/: import.rs  item_decl.rs  mod.rs  use_decl.rs
crates/cool_parser/src/expr/: access_expr.rs  align_of_expr.rs  array_expr.rs  array_repeat_expr.rs  as_expr.rs  binary_expr.rs  block_expr.rs  cast_expr.rs  cond_expr.rs  deref_expr.rs  expr.rs  fn_call_expr.rs  fn_expr.rs  for_expr.rs  ident_expr.rs  if_expr.rs  index_expr.rs  literal_expr.rs  loop_expr.rs  match_expr.rs  mod.rs  offset_of_expr.rs  paren_expr.rs  path_expr.rs  range_expr.rs  return_expr.rs  size_of_expr.rs  stmt_expr.rs  struct_expr.rs  (+4 more)
crates/cool_resolve/: Cargo.toml
crates/cool_resolve/src/: binding.rs  consts.rs  error.rs  expr.rs  expr_ty.rs  fn_abi.rs  id_vec.rs  item_id.rs  item_kind.rs  item_path.rs  item_table.rs  lib.rs  module.rs  name_table.rs  scope.rs  struct_ty.rs  ty_kind.rs
crates/cool_span/: Cargo.toml
crates/cool_span/src/: lib.rs  line_span.rs  section.rs  source_position.rs  span.rs
crates/cooler_parser/: Cargo.toml
crates/cooler_parser/src/: error.rs  ident.rs  lib.rs
(+283 files in other folders)
