[workspace]
members = [
    "cool_arena",
    "cool_cli",
    "cool_derive",
    "cool_driver",
    "cool_lexer",
    "cool_parser",
    "cool_span",
]
resolver = "2"

[workspace.dependencies]
ahash = "0.8"
bumpalo = "3.14"
clap = { version = "4.4", features = ["derive"] }
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
once_cell = "1.18"
paste = "1.0"
unicode-ident = "1.0"
