[workspace]
members = [
    "cool_collections",
    "cool_cli",
    "cool_derive",
    "cool_driver",
    "cool_lexer",
    "cool_parser",
    "cool_resolve",
    "cool_span",
]
resolver = "2"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1.0"
bumpalo = "3.14"
clap = { version = "4.4", features = ["derive"] }
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
once_cell = "1.18"
paste = "1.0"
smallvec = { version = "1.11", features = ["const_generics", "const_new", "union"] }
unicode-ident = "1.0"
