[package]
name = "cool_ast"
version = "0.1.0"
edition = "2021"

[dependencies]
cool_lexer = { path = "../cool_lexer" }
cool_parser = { path = "../cool_parser" }
cool_resolve = { path = "../cool_resolve" }
cool_span = { path = "../cool_span" }
paste = "1.0"
smallvec = { workspace = true }
thiserror = "1.0"
