[package]
name = "cool_ast"
version = "0.1.0"
edition = "2021"

[dependencies]
cool_collections = { path = "../cool_collections" }
cool_lexer = { path = "../cool_lexer" }
cool_parser = { path = "../cool_parser" }
cool_resolve = { path = "../cool_resolve" }
cool_span = { path = "../cool_span" }

derive_more = { workspace = true }
paste = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
