[package]
name = "cool_ast"
version = "0.1.0"
edition = "2021"

[dependencies]
cool_collections = { path = "../cool_collections" }
cool_derive = { path = "../cool_derive" }
cool_lexer = { path = "../cool_lexer" }
cool_span = { path = "../cool_span" }

derive_more = { workspace = true }
paste = { workspace = true }

[lints]
workspace = true
