[package]
name = "cool_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
cool_codegen = { path = "../cool_codegen" }
cool_driver = { path = "../cool_driver" }
cool_parser = { path = "../cool_parser" }
cool_resolve = { path = "../cool_resolve" }
cool_span = { path = "../cool_span" }

anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
inkwell = { workspace = true }
