[package]
name = "cool_codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
cool_ast = { path = "../cool_ast" }
cool_collections =  { path = "../cool_collections" }
cool_lexer = { path = "../cool_lexer" }
cool_parser = { path = "../cool_parser" }
cool_resolve = { path = "../cool_resolve" }

derive_more = { workspace = true }
inkwell = { workspace = true }
rustc-hash = { workspace = true }
