[package]
name = "cool_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
ast = { package = "cool_ast", path = "../cool_ast" }
cool_collections = { path = "../cool_collections" }
cool_derive = { path = "../cool_derive" }
cool_lexer = { path = "../cool_lexer" }
cool_package = { path = "../cool_package" }
cool_resolve = { path = "../cool_resolve" }
cool_span = { path = "../cool_span" }

anyhow = { workspace = true }
derive_more = { workspace = true }
toml = { workspace = true }
