[package]
name = "cool_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
cool_collections = { path = "../cool_collections" }
cool_lexer = { path = "../cool_lexer" }
cool_span = { path = "../cool_span" }

derive_more = { workspace = true }
paste = { workspace = true }
smallvec = { workspace = true }
