[package]
name = "cool_resolve"
version = "0.1.0"
edition = "2021"

[dependencies]
cool_arena = { path = "../cool_arena" }
cool_collections = { path = "../cool_collections" }
cool_lexer = { path = "../cool_lexer" }
derive_more =  { workspace = true }
paste = "1.0"
rustc-hash = "1.1"
smallvec = { workspace = true }
thiserror = "1.0"
